--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
             </div>
 
         </div>
+
+        <h1 id="alerts" >sgdfsdgds</h1>
         
         <script type="text/javascript" src="script.js" ></script>
     </body>
