--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@
                 <div id="dice_button">Roll Dice</div>
                 <h1 id="next_player_text" >Next player to roll dice:</h1>
                 <h1 id="player_name" >Player 1</h1>
+                <h1 id="alerts"></h1>
             </div>
 
         </div>
 
-        <h1 id="alerts" >sgdfsdgds</h1>
-        
         <script type="text/javascript" src="script.js" ></script>
     </body>
 </html>
