changed font import

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
     <head>
         <title>Small Snake</title>
         <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -76,5 +74,8 @@
         </div>
 
         <script type="text/javascript" src="script.js" ></script>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Monoton&family=Roboto&display=swap');
+          </style>
     </body>
 </html>
